last upateon project/added diet and fact
added diet and fact

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 			card += '<center>';
 			card += 'diet: ' + dinos_img.Dinos[i].diet;
 			card += '</br>';
+			card += '</br>';
+			card += 'fact: ' + dinos_img.Dinos[i].fact;
+			card += '</br>';
 			card += '</center>';
 			document.getElementById("data").innerHTML += card;
 			console.log(dinos_img['Dinos'][i]);
